Optimize photo filtering with normalized keys